# muze

./: .cache  :memory  Dockerfile  README.md  db.sqlite3  docker-compose.yaml  green.py  manage.py  my.cnf  prometheus.yaml  pyproject.toml  requirements.txt  run.sh  sample.csv  test_spotify_rate_limit.py  memory
.github/workflows/: deploy.yaml
celery/: main.py  tasks.py
circuit_breaker/: circuit_breaker.py  pyproject.toml  search_api_handler.py  test.py
docs/: DB테이블설계.md  api설계.md  데이터수집.md  스토리보드.md
frontend/: package-lock.json
frontend/src/: App.js
music-scraper/: .cache  sample.csv  scrape.py
music_dashboard/: __init__.py  asgi.py  celery.py  settings.py  tasks.py  urls.py  wsgi.py
music_dashboard/settings/: base.py  local.py  prod.py
music_scraper/: .cache  README.md  main.py  sample.csv  scrape.py
musics/: .cache  admin.py  apps.py  circuit_breaker.py  form.py  models.py  search_api_handler.py  tests.py  token_bucket.py  urls.py  views.py
musics/migrations/: 0001_initial.py  0002_comment.py  0002_initial.py  0003_alter_song_album_cover.py  0003_song_album.py  0004_alter_song_album_cover_alter_song_genre.py  0004_todaysong.py  0005_alter_todaysong_song.py  0005_comment_user.py  0006_alter_todaysong_song_alter_todaysong_user.py  0006_song_num_likes_song_num_mention.py  0007_alter_song_album_cover.py  0007_rename_album_song_album_name_and_more.py
polls/: admin.py  models.py  tests.py  urls.py  views.py
polls/migrations/: 0001_initial.py
sample_docker/: Dockerfile  app.py  pyproject.toml
server_test/: locustfile.py  search_queries.json
static/css/: animations.css  base.css  common.css  responsive.css  styles.css
static/musics/: styles.css
staticfiles/css/: common.css  styles.css
staticfiles/musics/: styles.css
staticfiles/polls/: style.css
staticfiles/user_messages/: inbox.css  message-form.css  style.css
staticfiles/users/: styles.css
templates/: base.html  home.html  login.html  navbar.html  searchbar.html
templates/account/: signup.html
user_messages/: forms.py  models.py  urls.py  views.py
users/: admin.py  apps.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
(+51 files in other folders)
