[tool.poetry]
name = "music-dashboard"
version = "0.1.0"
description = ""
authors = ["Eunsung Shin <eunsung.shin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
spotipy = "^2.24.0"
pandas = "^2.2.3"
tqdm = "^4.66.5"
django-allauth = "^65.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
