[tool.poetry]
name = "circuit-breaker"
version = "0.1.0"
description = ""
authors = ["eunsung <edplab2019@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
ptest = "^2.0.3"
pytest = "^8.3.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
